fix issue of team panel collapse if all teams are deleted

--- a/app/assets/stylesheets/teams.css.scss
+++ b/app/assets/stylesheets/teams.css.scss
@@ -192,7 +192,7 @@ div.display-logo {
 }
 
 div.display-logo.without-image {
-  margin-top: 60px;
+  margin-top: 160px;
 }
 
 #add-team-button {
